@@ -48,6 +48,9 @@ class ListTest(UnitTest):
 
         self.assertTrue( added == [1,2,3,4], "TODO: #222 - a lot of work implementing __coerce__ etc.")
 
+        l1 += l2
+        self.assertTrue(l1 == [1,2,3,4], "l1 += l2")
+
     def testDelete(self):
         value = [0, 1, 2, 3, 4]
         del value[4]
