@@ -446,6 +446,26 @@ String.prototype.__setitem__ = function(idx, val) {
 
 String.prototype.upper = String.prototype.toUpperCase;
 String.prototype.lower = String.prototype.toLowerCase;
+
+String.prototype.__add__ = function(y) {
+    if (typeof y != "string") {
+        throw pyjslib.TypeError("cannot concatenate 'str' and non-str objects");
+    }
+    return this + y;
+}
+
+String.prototype.__mul__ = function(n) {
+    if (typeof n != "number") {
+        throw pyjslib.TypeError("can't multiply sequence by non-int of type 'str'");
+    }
+    var s = '';
+    while (n--) {
+        s += this;
+    }
+    return s;
+}
+String.prototype.__rmul__ = String.prototype.__mul__;
+
 """)
 
     # Patching of the standard javascript Array object
@@ -781,6 +801,23 @@ class List:
         return s;
         """)
 
+    def __add__(self, y):
+        if not isinstance(y, self):
+            raise TypeError("can only concatenate list to list")
+        return list(self.l.concat(y.l))
+
+    def __mul__(self, n):
+        if not isNumber(n):
+            raise TypeError("can't multiply sequence by non-int")
+        a = []
+        while n:
+            n -= 1
+            a.extend(self.l)
+        return a
+
+    def __rmul__(self, n):
+        return self.__mul__(n)
+
 list = List
 
 class Tuple:
@@ -895,6 +932,23 @@ class Tuple:
         s += ")";
         return s;
         """)
+
+    def __add__(self, y):
+        if not isinstance(y, self):
+            raise TypeError("can only concatenate tuple to tuple")
+        return tuple(self.l.concat(y.l))
+
+    def __mul__(self, n):
+        if not isNumber(n):
+            raise TypeError("can't multiply sequence by non-int")
+        a = []
+        while n:
+            n -= 1
+            a.extend(self.l)
+        return a
+
+    def __rmul__(self, n):
+        return self.__mul__(n)
 
 tuple = Tuple
 
@@ -1417,6 +1471,8 @@ def isinstance(object_, classinfo):
     if not isObject(object_):
         return False
     if _isinstance(classinfo, Tuple):
+        if _isinstance(object_, Tuple):
+            return True
         for ci in classinfo:
             if isinstance(object_, ci):
                 return True
@@ -1619,6 +1675,77 @@ def hash(obj):
     }
     """)
 
+
+def op_uadd(v):
+    raise TypeError("bad operand type for unary +: '%r'" % v)
+
+def op_usub(v):
+    raise TypeError("bad operand type for unary -: '%r'" % v)
+
+def op_add(x, y):
+    JS("""
+    if (typeof x == typeof y && (typeof x == 'number' || typeof x == 'string')) {
+        return x + y;
+    }
+    if (x !== null && y !== null) {
+        if (typeof x['__add__'] != 'undefined') return x.__add__(y);
+        if (typeof y['__radd__'] != 'undefined') return y.__radd__(x);
+        if (typeof y['__add__'] != 'undefined') return y.__add__(x);
+    }
+    throw pyjslib['TypeError']("unsupported operand type(s) for +: '%r', '%r'" % (x, y))
+""")
+
+def op_sub(x, y):
+    JS("""
+    if (typeof x == typeof y && (typeof x == 'number' || typeof x == 'string')) {
+        return x - y;
+    }
+    if (x !== null && y !== null) {
+        if (typeof x['__sub__'] != 'undefined') return x.__sub__(y);
+        if (typeof y['__rsub__'] != 'undefined') return y.__rsub__(x);
+    }
+    throw pyjslib['TypeError']("unsupported operand type(s) for -: '%r', '%r'" % (x, y))
+""")
+
+def op_div(x, n):
+    JS("""
+    if (typeof x == 'number' && typeof n == 'number') {
+        return x / y;
+    }
+    if (x !== null && n !== null) {
+        if (typeof x['__div__'] != 'undefined') return x.__div__(n);
+        if (typeof n['__rdiv__'] != 'undefined') return n.__rdiv__(x);
+    }
+    throw pyjslib['TypeError']("unsupported operand type(s) for /: '%r', '%r'" % (x, n))
+""")
+
+def op_mul(x, n):
+    JS("""
+    if (typeof x == 'number' && typeof n == 'number') {
+        return x * y;
+    }
+    if (x !== null && n !== null) {
+        if (typeof x['__mul__'] != 'undefined') return x.__mul__(n);
+        if (typeof n['__rmul__'] != 'undefined') return n.__rmul__(x);
+        if (typeof n['__mul__'] != 'undefined') return n.__mul__(x);
+    }
+    throw pyjslib['TypeError']("unsupported operand type(s) for *: '%r', '%r'" % (x, n))
+""")
+
+def op_mod(x, y):
+    JS("""
+    if (typeof x == typeof y && typeof x == 'number') {
+        return x % y;
+    }
+    if (typeof x == 'string') {
+        return pyjslib.sprintf(x, y);
+    }
+    if (x !== null && y !== null) {
+        if (typeof x['__mod__'] != 'undefined') return x.__mod__(y);
+        if (typeof y['__rmod__'] != 'undefined') return y.__rmod__(x);
+    }
+    throw pyjslib['TypeError']("unsupported operand type(s) for %: '%r', '%r'" % (x, y))
+""")
 
 # type functions from Douglas Crockford's Remedial Javascript: http://www.crockford.com/javascript/remedial.html
 @compiler.noSourceTracking
