@@ -7,6 +7,8 @@
    FocusPanel and FocusWidget both get that functionality (thanks to
    guenter walser)
 
+ * Added --operator-funcs to enable non-number operation such as [1]+[2]
+
  * Added --inline-code to speedup eq/bool/len (saves expensive function calls)
 
  * All attributes are accessed as v['attr'] and not as v.attr anymore
